--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-streamlit==1.27.0
-pandas==2.1.1
-numpy==1.26.0
-yfinance==0.2.31
-plotly==5.17.0
-neuralprophet==0.5.1
-torch==2.1.0
+streamlit
+pandas
+numpy
+yfinance
+plotly
+neuralprophet
+torch
